--- a/BHSCMSApp/BHSCMSApp/Web.config
+++ b/BHSCMSApp/BHSCMSApp/Web.config
@@ -64,9 +64,14 @@
             change the connection string named "DefaultConnection" to connect to an instance
             of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
       -->
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+    
+    <sessionState mode="InProc"
+                stateConnectionString="tcpip=127.0.0.1:54602"
+                sqlConnectionString="Data Source=.\SQLEXPRESS;Trusted_Connection=Yes;"
+                cookieless="false"
+                timeout="100">
       <providers>
-        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection"/>
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="BHSCMS"/>
       </providers>
     </sessionState>
   </system.web>
