Admin NewVendor Registration
Data from portal inserts into DB

--- a/BHSCMSApp/BHSCMSApp/Web.config
+++ b/BHSCMSApp/BHSCMSApp/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BHSCMSApp-20140906012915.mdf;Initial Catalog=aspnet-BHSCMSApp-20140906012915;Integrated Security=True" providerName="System.Data.SqlClient"/>
-    <add name="BHSCMS" connectionString="Data Source=Martinez-PC;Initial Catalog=BHSCMS;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="BHSCMS" connectionString="Data Source=(localDB)\v11.0;Initial Catalog=BHSCMS;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <authentication mode="Forms">
