--- a/BHSCMSApp/BHSCMSApp/Web.config
+++ b/BHSCMSApp/BHSCMSApp/Web.config
@@ -9,8 +9,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BHSCMSApp-20140906012915.mdf;Initial Catalog=aspnet-BHSCMSApp-20140906012915;Integrated Security=True" providerName="System.Data.SqlClient"/>
-    <add name="BHSCMS" connectionString="Data Source=(localDB)\v11.0;Initial Catalog=BHSCMS;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BHSCMSApp-20140906012915.mdf;Initial Catalog=aspnet-BHSCMSApp-20140906012915;Integrated Security=False" providerName="System.Data.SqlClient"/>
+    <add name="BHSCMS" connectionString="Data Source=NickWorkStation;Initial Catalog=BHSCMS;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <authentication mode="Forms">
